TDD passed, DB not working

--- a/Day_2/views/create.erb
+++ b/Day_2/views/create.erb
@@ -7,10 +7,10 @@
 <p><%= @shoo.address() %></p>
 
 <h3>Shoo Size:</h3>
-<p><%= @shoo.shoo.size() %></p>
+<p><%= @shoo.size() %></p>
 
 <h3>Quantity:</h3>
-<p><%= @shoo.shoo.quantity() %></p>
+<p><%= @shoo.quantity() %></p>
 
 <h3>Total:</h3>
-<p><%= @shoo.shoo.total() %></p>
+<p><%= @shoo.total() %></p>
