--- a/Day_2/views/new.erb
+++ b/Day_2/views/new.erb
@@ -1,6 +1,6 @@
 <h1>Place a Shoo Order</h1>
 
-<form action= '/shoe' method = 'post'>
+<form action= '/shoo' method = 'post'>
   
   <label for = 'first_name'>First Name:</label>
   <input type='text' name='first_name'>
