--- a/day_3/music_library_start_point/views/new_album.erb
+++ b/day_3/music_library_start_point/views/new_album.erb
@@ -4,17 +4,13 @@
   <label for="name">Album Title:</label>
   <input type="text" name="name">
 
-  <!-- <label for="last_name">Artist Name:</label>
-  <input type="text" name="last_name"> -->
-
-  <!-- <label for="topping">Select a pizza:</label>
-    <select name="topping">
-      <option value="Margherita">Margherita</option>
-      <option value="Calzone">Calzone</option>
-    </select> -->
-<!-- 
-  <label for="quantity">Quantity:</label>
-  <input type="number" name="quantity"> -->
+  <label for="artist">Select artist:</label>
+    <select name="artist_id">
+     
+      <% @artists.each do |artist|  %>
+        <option value=<%=artist.id %> > <%= artist.name %> </option>
+      <% end %>
+    </select>
   
   <input type='submit' value="Add Album">
 </form>
